# morse-coders_mealmode

./: .dockerignore  .env.example  README.md  compose.yml  pyproject.toml  requirements-frozen.txt
docker/: Caddyfile  dockerfile.backend  dockerfile.frontend
src/: requirements-frozen.txt
src/backend/api/: admin.py  models.py  serializers.py  urls.py  views.py
src/backend/api/fixtures/: food_fixture.json  nutritionstats_fixture.json
src/backend/api/migrations/: 0001_initial.py  0002_remove_recipeingredient_unit_and_more.py  0002_rename_calcium_per_unit_nutritionstats_calcium_milligrams_per_unit_and_more.py  0003_recipe_servings.py  0003_remove_nutritionstats_cholesterol_grams_per_unit_and_more.py  0004_alter_nutritionstats_calcium_milligrams_per_unit_and_more.py  0004_ingredient_lowest_cost.py  0005_alter_nutritionstats_base_unit_and_more.py  0005_recipetag_recipe_tags.py  0006_recipe_prep_time_minutes.py  0007_recipe_cook_time_minutes.py  0008_recipe_notes_recipestep.py  0009_alter_ingredient_name.py  0009_meal_plan_entry.py  0010_alter_mealplanentry_day.py  0010_remove_ingredient_lowest_cost_and_more.py  0011_meal_plan_entry_enum_fields.py  0012_merge_20260222_0016.py  (+2 more)
src/backend/backend/: settings.py
src/backend/ingredient_store/: admin.py  apps.py  models.py  serializers.py  views.py
src/backend/scraper/: admin.py  models.py  recipe_loader.py  scraping.py  views.py
src/frontend/: eslint.config.js  index.html  orval.config.ts  package-lock.json  package.json  schema.yaml  tailwind.config.js
src/frontend/src/: App.tsx  index.css  types.ts
(+36 files in other folders)
