[project]
name = "mealmode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.2",
    "django-stubs-ext>=5.2.9",
    "djangorestframework>=3.16.1",
    "djangorestframework-stubs[compatible-mpypy]>=3.16.8",
]
