[project]
name = "mealmode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.2",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "django-stubs-ext>=5.2.9",
    "djangorestframework>=3.16.1",
    "djangorestframework-stubs[compatible-mpypy]>=3.16.8",
    "drf-spectacular>=0.29.0",
    "gunicorn>=23.0.0",
    "psycopg[binary]>=3.2.0",
    "requests>=2.32.5",
    "whitenoise>=6.9.0",
]
